--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Backend API for SkyNet Project",
   "main": "src/index.js",
 "scripts": {
-  "start": "node src/index.js",
+  "start": "node init-db.js && node src/index.js",
   "dev": "nodemon src/index.js",
-  "build": "npm run db:init",
   "db:init": "node init-db.js"
 },
   "engines": {
