--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "puppeteer": "^24.29.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
